<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirma_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.alfredoul.tareaactivities.ConfirmaDatos">

    <TextView
        android:id="@+id/tv_titulo"
        android:text="@string/titulo_confirma_datos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/texto_titulo_encabezado"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_nombre"
        android:text="@string/nombre_completo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_titulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:textSize="@dimen/texto_normal" />

    <TextView
        android:id="@+id/tv_nacimiento"
        android:text="@string/fecha_nacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_nombre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:textSize="@dimen/texto_normal" />

    <TextView
        android:id="@+id/tv_telefono"
        android:text="@string/telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_nacimiento"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:textSize="@dimen/texto_normal" />

    <TextView
        android:id="@+id/tv_email"
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_telefono"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:textSize="@dimen/texto_normal" />

    <TextView
        android:id="@+id/tv_descripcion_contacto"
        android:text="@string/descripcion_contacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:textSize="@dimen/texto_normal" />

    <Button
        android:text="@string/btn_editar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_descripcion_contacto"
        android:id="@+id/btnEditar"
        android:theme="@style/BotonRaised" />


</RelativeLayout>
